# aiops

./: .gitignore  COMMANDS.md  Makefile  README.md  USAGE.md  main.py  pyproject.toml  setup.sh
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/canvas/: geometry.ts
frontend/src/components/: AnnotationCanvas.tsx  AnnotationEditor.tsx  AssignDialog.tsx  ExportDialog.tsx  HomeScreen.tsx  LabelPicker.tsx  LabelsDialog.tsx  ProjectView.tsx  ShapeList.tsx
frontend/src/state/: editorReducer.ts
src/aiops/: __init__.py
src/aiops/annotate/: __init__.py  assign.py  export.py  models.py  server.py  storage.py
src/aiops/cli/: __init__.py  annotate_cmd.py  db_cmd.py  generate_cmd.py  ocr_cmd.py  yolo_cmd.py
src/aiops/core/: __init__.py  config.py  log.py  plugin.py  types.py
src/aiops/db/: __init__.py  base.py  mongo.py  mssql.py  mysql.py  postgres.py  redis_backend.py
src/aiops/generators/: __init__.py  backend.py  frontend.py
src/aiops/ocr/: __init__.py  base.py  easy_engine.py  paddle_engine.py  tesseract_engine.py
src/aiops/ocr/training/: __init__.py  easy_trainer.py  paddle_trainer.py  tesseract_trainer.py
src/aiops/vision/: __init__.py  dataset.py  preprocessing.py  roi.py  yolo.py
tests/: conftest.py  test_annotate_api.py  test_annotate_assign.py  test_annotate_export.py  test_annotate_storage.py  test_cli.py  test_core.py  test_dataset.py  test_db.py  test_ocr.py  test_preprocessing.py
