[project]
name = "aiops"
version = "0.1.0"
description = "Production-grade ML engineer utility library for CV, backend, and data pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
paddle = ["paddleocr>=2.7", "paddlepaddle>=2.5"]
easyocr = ["easyocr>=1.7"]
tesseract = ["pytesseract>=0.3"]
yolo = ["ultralytics>=8.0"]
postgres = ["asyncpg>=0.29", "psycopg2-binary>=2.9"]
mysql = ["aiomysql>=0.2"]
mssql = ["pymssql>=2.2"]
mongo = ["motor>=3.3"]
redis = ["redis[hiredis]>=5.0"]
all-ocr = ["aiops[paddle,easyocr,tesseract]"]
all-db = ["aiops[postgres,mysql,mssql,mongo,redis]"]
all = ["aiops[all-ocr,yolo,all-db]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
aiops = "aiops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiops"]

[tool.ruff]
line-length = 100
target-version = "py312"
